@@ -2,6 +2,8 @@
 
 	* R/anytime.R (anydate,utcdate): Check for input of class Date
 
+	* src/anytime.cpp (stringSplitter): Be more defensive about input string
+
 2016-11-07  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.1.0
